# eazyA

./: .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  hardhat.config.ts  next.config.ts  package-lock.json  package.json
actions/: deploy-models.ts  model-service.ts  upload-dataset.ts
app/: layout.tsx  page.tsx
app/datasets/: page.tsx
app/models/: page.tsx
app/profile/: page.tsx
components/: main-nav.tsx  user-nav.tsx
components/providers/: polkadot.tsx
components/ui/: button.tsx
contracts/: Box.sol  RegisterDataset.sol
data_model/: README.md  pyproject.toml  setup.py
data_model/src/data_model/: __init__.py  __main__.py  client.py
data_model/src/data_model/utils/: abi_loader.py  dataframe_converter.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: layout.tsx  main-nav.tsx  mode-toggle.tsx  theme-provider.tsx  user-nav.tsx
frontend/src/pages/: datasets.tsx  home.tsx  login.tsx  models.tsx  profile.tsx  signup.tsx
ignition/deployments/chain-1287/: deployed_addresses.json  journal.jsonl
ignition/deployments/chain-1287/artifacts/: BoxModule#Box.dbg.json  BoxModule#Box.json  RegisterDatasetModule#RegisterDataset.dbg.json  RegisterDatasetModule#RegisterDataset.json
ignition/modules/: Box.ts  RegisterDataset.ts
polkadot_api/: package-lock.json  package.json  tsconfig.json
polkadot_api/abis/: registerDataset.json
polkadot_api/actions/: upload-dataset.ts
polkadot_api/app/: globals.css  uploadModelPage.tsx
polkadot_api/components/providers/: polkadot.tsx
(+1 files in other folders)
